--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.github.amlcurran.showcaseview:library:5.0.0'
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
